# spnc

./: README.md
.github/workflows/: app-api.yml  app-ui.yml  mspsolarpunk-web.yml
projects/collabornet/: .gitignore  Makefile  README.md  Tiltfile  kind-cluster.yaml  pyproject.toml  pyrightconfig.json
projects/collabornet/research/: 20260616.build-vs-buy.md  20260616.build-vs-fork-recommendation.md
projects/collabornet/services/app-api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
projects/collabornet/services/app-api/alembic/: env.py
projects/collabornet/services/app-api/alembic/versions/: 0001_create_collab_sites.py
projects/collabornet/services/app-api/app_api/: db.py  main.py  models.py  seed.py
projects/collabornet/services/app-api/fixtures/demo/: collab_sites.yaml
projects/collabornet/services/app-api/tests/: conftest.py  test_root.py  test_sites.py
projects/collabornet/stories/: STORIES.md  _template.md  (+7 more)
projects/jk3s/: README.md
projects/mspsolarpunk/: README.md  kind-cluster.yaml
projects/postcard-printer/: README.md  pyproject.toml
projects/postcard-printer/examples/: itinerary.yaml  mixed.yaml
projects/postcard-printer/postcard_printer/: __init__.py  cli.py  layout.py  qr.py  render.py
projects/postcard-printer/templates/: calibration.html.j2  sheet.html.j2  styles.css
projects/postcard-printer/templates/cards/: itinerary.html.j2  note.html.j2
stories/: README.md  SPNC-0007.radiusofstewardship.md  STORIES.md
stories/done/: SPNC-0003.establish-cloud-deployment-mvp.md  SPNC-0005.deployment-mvp-on-local-hardware.md
(+90 files in other folders)
