[project]
name = "postcard-printer"
version = "0.1.0"
description = "Programmatically render 4x6 postcards for Avery 5389 (2-up on US Letter)."
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6",
    "segno>=1.6",
]

[project.optional-dependencies]
# PDF output. Also needs the pango system lib:  brew install pango
pdf = ["weasyprint>=60"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["postcard_printer"]
